# evmone4eosio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  circle.yml  memcost.py
cmake/: cable.cmake
cmake/cable/: CableCompilerSettings.cmake
cmake/cable/toolchains/: cxx17-pic.cmake
ethash/lib/ethash/: managed.cpp
ethereum_vm/: LICENSE  README.md  eth_account.cpp  eth_account.hpp  ethereum_vm.abi  ethereum_vm.cpp  evm_test.hpp  evmtest.abi  evmtest.cpp  table_struct.hpp
evm4eosiotest/: GeneralStateTestsRunner.py  README.md  about-the-rules.ipynb  demo.ipynb  eth2eosbridge.py  ethformatter.py  evm.py  evm4eosiobackend.py  evm_test.py  implementaion-detail.md  init.py  provider.py  testnet-init.py  testsrunner.py
evm4eosiotest/contracts/eosio.bios/: eosio.bios.abi  eosio.bios.wasm
evm4eosiotest/contracts/ethereum_vm/: ethereum_vm.abi  ethereum_vm.wasm  evmtest.wasm
evm4eosiotest/sol/: callee.sol  empty.sol  greeter.sol  payableconstructor.sol  tester.sol
evm4eosiotest/sol/precompiled/: Callee.json  Empty.json  Greeter.json  PayableConstructor.json  Tester.json
evmc/include/evmc/: evmc.hpp
include/: eosiolib.h
include/eevm/: rlp.h
include/eosiolib/: action.h  chain.h  crypto.h  db.h  eosio.hpp  print.h  privileged.h  system.h  transaction.hpp  types.h
include/eosiolib/capi/eosio/: types.h
include/eosiolib/contracts/eosio/: action.hpp
include/eosiolib/core/eosio/: crypto.hpp  datastream.hpp  fixed_bytes.hpp  print.hpp
include/eosiolib_legacy/: action.h  action.hpp  asset.hpp  chain.h  compiler_builtins.h  crypto.h  datastream.hpp  db.h  dispatcher.hpp  eosio.hpp  eosiolib.h  ext.h  fixed_key.hpp  fixedpoint.hpp  memory.h  memory.hpp  permission.h  permission.hpp  print.h  print.hpp  producer_schedule.hpp  public_key.hpp  singleton.hpp  symbol.hpp  system.h  time.hpp  token.h  token.hpp  transaction.h  transaction.hpp  types.h  types.hpp  vector.hpp
intx/include/intx/: int128.hpp
lib/: CMakeLists.txt
lib/evmone/: CMakeLists.txt  analysis.cpp  analysis.hpp  evmhost.cpp  evmhost.hpp  evmone.cpp  evmone4eosio.cpp  evmone4eosio.hpp  evmone4eosio_test.cpp  execution.cpp  instructions.cpp  memory_cost.hpp  test.cpp  utility.cpp  utility.hpp
secp256k1/: CMakeLists.txt
secp256k1/src/: ecmult_gen_impl.h  ecmult_static_context.h  secp256k1.c
test/: memcost.cpp
test/bench/: CMakeLists.txt
test/unittests/: CMakeLists.txt  evm_calls_test.cpp  evm_state_test.cpp  memory_cost_test.cpp
test/utils/: utils.cpp
